@@ -1,2 +1,6 @@
-Gorilla/index.theme.in
 Gorilla/icons/index.theme.in
+Gorilla/index.theme.in
+Lush/icons/index.theme.in
+Lush/index.theme.in
+Nuvola/icons/index.theme.in
+Nuvola/index.theme.in
