@@ -1,0 +1,5 @@
+2003-05-07  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Added missing files.
+	* sv.po: Added Swedish translation.
+
