@@ -1,3 +1,7 @@
+2003-05-07  Christian Rose  <menthos@menthos.com>
+
+	* configure.in: Added "sv" to ALL_LINGUAS.
+
 2003-05-03  Andrew Sobala  <aes@gnome.org>
 
 	* configure.in (AC_OUTPUT): stop duplicate creation of Nuvola/metacity-1/Makefile
